05-generate-deployment-registry/.test/service-enabled.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-api
  namespace: apps-enabled
spec:
  selector:
    app: registry-provider
    component: grpc
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
      appProtocol: grpc
