05-generate-deployment-registry/.test/configmap-enabled-updated-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: registry-apps-enabled-provider-a
  namespace: registry-engine
  labels:
    kyverno.io/registry-provider: "true"
data:
  enabled: "true"
  namespace: apps-enabled
  deployment: provider-a
  generation: "2"
  grpcAddress: registry-api.apps-enabled.svc.cluster.local:50052
